# pouncer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  biome.json  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/workflows/: railway.yml
apps/cron/: Dockerfile  package.json  tsconfig.json
apps/cron/src/: index.ts
apps/extension/: .env.development  .env.production  package.json  popup.tsx  tsconfig.json
apps/extension/background/: api.ts  (+2 more)
apps/queue/: Dockerfile  package.json  tsconfig.json
apps/scraper/: Dockerfile  package.json  pyproject.toml
apps/scraper-rs/: Cargo.toml  Dockerfile  package.json
apps/scraper-rs/scripts/: python_parity.py
apps/scraper-rs/src/: browser.rs  config.rs  dom.rs  executor.rs  hosts.rs  http.rs  json_ld.rs  lib.rs  main.rs  models.rs  parsing.rs  runner.rs  scrape.rs  strategies.rs
apps/scraper-rs/tests/: extraction.rs  http_contract.rs  parity_python.rs
apps/scraper/app/: config.py  executor.py  hosts.py  json_ld.py  main.py  models.py  parsing.py  runner.py  scraper.py  strategies.py
apps/scraper/tests/: conftest.py  test_executor.py  test_extract_from_html.py  test_extract_json_ld.py  test_extract_meta_price.py  test_extract_price_from_text.py  test_main.py  test_scraper.py  test_stock_detection.py
apps/scraper/tests/fixtures/: european_price.html  graph_wrapper.html  json_ld_aggregate.html  sale_price.html  shopify_basic.html
apps/web/: Dockerfile  auth.ts  components.json  env.ts  middleware.ts  next.config.ts  package.json  postcss.config.mjs  tsconfig.json
(+60 files in other folders)
