[package]
name = "pounce-scraper-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.7"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
regex = "1.12.2"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.7"
once_cell = "1.21.3"
thirtyfour = "0.36.1"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
