[project]
name = "pounce-scraper"
version = "0.1.0"
description = "Product price and stock scraping service for Pounce"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "lxml>=5.0.0",
    "pydantic-settings>=2.7.0",
    "beautifulsoup4>=4.12.0",
    "scrapling[fetchers]>=0.2.96",
    "anthropic>=0.42.0",
    "python-json-logger>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
